Overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ p {
 		max-width: 750px;
 		margin-right: auto;
 		margin-left: auto;
+		overflow:hidden;
 	}
 }
 
